; ModuleID = '/home/carl/AnghaBench/openssl/crypto/evp/extr_evp_key.c_EVP_set_pw_prompt.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/evp/extr_evp_key.c_EVP_set_pw_prompt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@prompt_string = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @EVP_set_pw_prompt(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = icmp eq i8* %3, null
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i8*, i8** @prompt_string, align 8
  %7 = getelementptr inbounds i8, i8* %6, i64 0
  store i8 0, i8* %7, align 1
  br label %14

8:                                                ; preds = %1
  %9 = load i8*, i8** @prompt_string, align 8
  %10 = load i8*, i8** %2, align 8
  %11 = call i32 @strncpy(i8* %9, i8* %10, i32 79)
  %12 = load i8*, i8** @prompt_string, align 8
  %13 = getelementptr inbounds i8, i8* %12, i64 79
  store i8 0, i8* %13, align 1
  br label %14

14:                                               ; preds = %8, %5
  ret void
}

declare dso_local i32 @strncpy(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
